@startuml

title __LECTURER's Class Diagram__\n

  namespace com.fyp {
    namespace lecturer {
      class com.fyp.lecturer.AttendanceSheetActivity {
          ~ recycle_student_list : RecyclerView
          ~ toolbar : Toolbar
          + dispatchKeyEvent()
          # onCreate()
          # onNewIntent()
          # onResume()
      }
    }
  }
  

  namespace com.fyp {
    namespace lecturer {
      class com.fyp.lecturer.CreateAttendanceSheetActivity {
          ~ btn_create : Button
          ~ calendarView : CalendarView
          ~ date : String[]
          ~ et_LectureID : EditText
          ~ et_LectureName : EditText
          ~ et_Venue : EditText
          ~ toolbar : Toolbar
          ~ validator : Validator
          + onRequestPermissionsResult()
          + onValidationFailed()
          + onValidationSucceeded()
          # onCreate()
          - getLastKnownLocation()
          - getLocation()
          - getLocationLL()
          - initValidator()
      }
    }
  }
  

  namespace com.fyp {
    namespace lecturer {
      class com.fyp.lecturer.LecturerQRCodeActivity {
          ~ img_QRCode : ImageView
          # onCreate()
      }
    }
  }
  

  namespace com.fyp {
    namespace lecturer {
      class com.fyp.lecturer.Lecturer_MainActivity {
          ~ mNavigationController : NavigationController
          ~ pageNavigationView : PageNavigationView
          ~ testColors : int[]
          ~ toolbar : Toolbar
          ~ viewPager : ViewPager
          # onCreate()
          - initMaterialDrawer()
      }
    }
  }
  

  com.fyp.lecturer.AttendanceSheetActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.fyp.lecturer.CreateAttendanceSheetActivity .up.|> com.mobsandgeeks.saripaar.Validator.ValidationListener
  com.fyp.lecturer.CreateAttendanceSheetActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.fyp.lecturer.LecturerQRCodeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.fyp.lecturer.LecturerQRCodeActivity o-- com.fyp.helper.QRCodeHelper.QRInformation : info
  com.fyp.lecturer.Lecturer_MainActivity -up-|> com.heinrichreimersoftware.materialdrawer.DrawerActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
